feat: create table header with SLDS, add check for empty result

--- a/force-app/main/default/classes/ServiceCaseQueueService.cls
+++ b/force-app/main/default/classes/ServiceCaseQueueService.cls
@@ -2,11 +2,11 @@ public inherited sharing class ServiceCaseQueueService {
     @AuraEnabled(cacheable=true)
     public static List<Case> getUserCases() {
         return [    
-            SELECT Id, CaseNumber, OwnerId, Status, Priority, Origin, CreatedDate
+            SELECT Id, CaseNumber, OwnerId, Owner.FirstName, Owner.LastName, Status, Priority, Origin, CreatedDate
             FROM Case
             //here we should extract only cases of current user
             WITH SECURITY_ENFORCED
-            ORDER BY ContactId, Priority ASC, CreatedDate DESC
+            ORDER BY OwnerId, Priority ASC, CreatedDate DESC
             LIMIT 25
         ];
     }
