feat: add navigation to Case record by Case number

--- a/force-app/main/default/classes/ServiceCaseQueueService.cls
+++ b/force-app/main/default/classes/ServiceCaseQueueService.cls
@@ -24,7 +24,7 @@ public inherited sharing class ServiceCaseQueueService {
             ) AND OwnerId != :currentUserId
             WITH SECURITY_ENFORCED
             ORDER BY OwnerId ASC, Priority ASC, CreatedDate DESC
-            LIMIT :caseRemainder
+            LIMIT :casesRemainder
         ];
 
         currentUserCases.addAll(othersUserCases);
