feat: add PDF rendering of VF page

--- a/force-app/main/default/classes/AccountCasesPdfCtrl.cls
+++ b/force-app/main/default/classes/AccountCasesPdfCtrl.cls
@@ -1,7 +1,7 @@
 public without sharing class AccountCasesPdfCtrl {
     public static List<Case> getAccountCasesPrevWeek() {
         return [
-            SELECT Account.Name, Account.Owner.FirstName, Account.Owner.LastName, CaseNumber, Status, Priority, Origin, CreatedDate
+            SELECT Account.Name, Account.Owner.Name, CaseNumber, Status, Priority, Origin, CreatedDate
             FROM Case
             WHERE CreatedDate = LAST_WEEK 
             WITH SECURITY_ENFORCED
